Revise data-prep inputs

--- a/data-raw/bibfile.bib
+++ b/data-raw/bibfile.bib
@@ -1,10 +1,15 @@
-@article{AnckarFredriksson2018,
-  type = {Journal {{Article}}},
-  title = {Classifying Political Regimes 1800-2016: A Typology and a New Dataset},
+@article{anckarClassifyingPoliticalRegimes2018,
+  title = {Classifying Political Regimes 1800–2016: A Typology and a New Dataset},
   author = {Anckar, Carsten and Fredriksson, Cecilia},
   year = {2018},
+  month = mar,
   journal = {European Political Science},
-  doi = {10.1057/s41304-018-0149-8}
+  volume = {18},
+  number = {1},
+  pages = {84--96},
+  doi = {10.1057/s41304-018-0149-8},
+  abstract = {In the present text, we introduce a classification scheme where we decompose democracies and autocracies into several categories. Based on this classification scheme, we create a global dataset covering the time period 1800–2016. In the dataset, we make yearly observations for all countries that have been independent at any point in time since the Second World War. Regarding democracies, we first distinguish between republics and monarchies. We then split the category of republics into presidential, semi-presidential, and parliamentary systems. Within the category of monarchies, almost all systems are parliamentary, but a few countries are conferred to the category semi-monarchies. Authors differ markedly in terms of how autocratic regimes should be classified. In the present dataset, we classify autocratic countries into the following main categories: absolute monarchy, military rule, party-based rule, personalist rule, and oligarchy. Within the categories party-based rule and oligarchy, we also identify a number of subcategories.},
+  file = {C\:\\Users\\marquexa\\Zotero\\storage\\GZ9KBPSX\\41304_2018_149_MOESM1_ESM.docx;C\:\\Users\\marquexa\\Zotero\\storage\\LXD5DEMJ\\Anckar-2018-Classifying political regimes 1800.pdf;C\:\\Users\\marquexa\\Zotero\\storage\\QQSXXQ6Y\\41304_2018_149_MOESM2_ESM.xlsx}
 }
 
 @article{anrr2019,
@@ -15,7 +20,8 @@
   volume = {127},
   number = {1},
   pages = {47--100},
-  doi = {10.1086/700936}
+  doi = {10.1086/700936},
+  file = {C:\Users\marquexa\Zotero\storage\EYNSEBMS\Acemoglu et al. - 2019 - Democracy Does Cause Growth.pdf}
 }
 
 @book{Arat1991,
@@ -23,7 +29,8 @@
   author = {Arat, Zehra F.},
   year = {1991},
   publisher = {Lynne Rienner Publishers},
-  address = {Boulder}
+  address = {Boulder},
+  file = {C:\Users\marquexa\Zotero\storage\5Z2GGI2H\Arat - 1991 - Democracy and human rights in developing countries.pdf}
 }
 
 @article{blm2005,
@@ -34,18 +41,22 @@
   volume = {38},
   number = {8},
   pages = {939--970},
-  doi = {10.1177/0010414005277083}
+  doi = {10.1177/0010414005277083},
+  file = {C:\Users\marquexa\Zotero\storage\BT4GHRQY\Bowman et al. - 2005 - Measuring political democracy Case expertise, dat.pdf}
 }
 
-@article{bmr2007,
-  title = {A Complete Dataset of Political Regimes, 1800-2007},
+@article{bmr2012,
+  title = {A {{Complete Data Set}} of {{Political Regimes}}, 1800–2007},
   author = {Boix, Carles and Miller, Michael and Rosato, Sebastian},
   year = {2012},
   journal = {Comparative Political Studies},
   volume = {46},
   number = {12},
   pages = {1523--1554},
-  doi = {10.1177/0010414012463905}
+  doi = {10.1177/0010414012463905},
+  abstract = {This article updates and describes a widely used data set on democracy. Covering 1800–2007 and 213 countries, it represents the most comprehensive dichotomous measure of democracy currently available. We argue that our measure’s distinguishing features—a concrete, dichotomous coding and a long time span—are of critical value to empirical work on democracy. Inspired by Robert Dahl, we define a country as democratic if it satisfies conditions for both contestation and participation. Specifically, democracies feature political leaders chosen through free and fair elections and satisfy a threshold value of suffrage. After comparing our coding to that of other popular measures, we illustrate how democracy’s predictive factors have evolved since 1800. In particular, we show that economic modernization variables have steadily declined in their correlation with democracy over time.},
+  keywords = {data,democracy},
+  file = {C\:\\Users\\marquexa\\Zotero\\storage\\AMD8IB6A\\Comparative Political Studies-2013-Boix-1523-54 (1).pdf;C\:\\Users\\marquexa\\Zotero\\storage\\HYBQXFEW\\Boix et al. - 2012 - A complete dataset of political regimes, 1800-2007.pdf;C\:\\Users\\marquexa\\Zotero\\storage\\WKXZVINN\\Boix-2012-A Complete Data Set.pdf}
 }
 
 @article{bnr2001,
@@ -56,15 +67,17 @@
   volume = {63},
   number = {3},
   pages = {775--803},
-  doi = {10.1111/0022-3816.00087}
+  doi = {10.1111/0022-3816.00087},
+  file = {C:\Users\marquexa\Zotero\storage\HJ8F6CL7\Bernhard et al. - 2001 - Economic performance, institutional intermediation.pdf}
 }
 
-@misc{Bollen2001,
-  type = {Data Set},
+@misc{bollen2001,
   title = {Cross-National Indicators of Liberal Democracy, 1950-1990},
   author = {Bollen, Kenneth A.},
   year = {2001},
-  publisher = {{Inter-university Consortium for Political and Social Research (ICPSR) [distributor]}}
+  publisher = {{Inter-university Consortium for Political and Social Research (ICPSR) [distributor]}},
+  doi = {10.3886/ICPSR02532.v2},
+  file = {C:\Users\marquexa\Zotero\storage\UZE2BN6I\Bollen - 2001 - Cross-national indicators of liberal democracy, 19.pdf}
 }
 
 @article{BollenPaxton2000,
@@ -75,14 +88,16 @@
   volume = {33},
   number = {1},
   pages = {58--86},
-  doi = {10.1177/0010414000033001003}
+  doi = {10.1177/0010414000033001003},
+  file = {C:\Users\marquexa\Zotero\storage\A6UU3NHU\Bollen and Paxton - 2000 - Subjective measures of liberal democracy.pdf}
 }
 
-@techreport{bti2022,
-  title = {Transformation Index of the Bertelsmann Stiftung 2022},
+@techreport{bti2024,
+  title = {Transformation Index of the Bertelsmann Stiftung 2024},
   author = {{Bertelsmann Stiftung}},
-  year = {2022},
-  institution = {Bertelsmann Stiftung}
+  year = {2024},
+  institution = {Bertelsmann Stiftung},
+  file = {C:\Users\marquexa\Zotero\storage\TKWW357R\Bertelsmann Stiftung - 2022 - Transformation index of the bertelsmann stiftung 2.pdf}
 }
 
 @article{doorenspleet2000,
@@ -93,62 +108,121 @@
   volume = {52},
   number = {03},
   pages = {384--406},
-  doi = {10.1017/S0043887100016580}
+  doi = {10.1017/S0043887100016580},
+  file = {C:\Users\marquexa\Zotero\storage\SVADZUJ6\Doorenspleet - 2000 - Reassessing the three waves of democratization.pdf}
 }
 
 @techreport{eiu2023,
-  title = {Democracy Index 2022: {{Frontline}} Democracy and the Battle for Ukraine},
+  title = {Democracy Index 2022: {{Frontline Democracy}} and the {{Battle}} for {{Ukraine}}},
   author = {{The Economist Intelligence Unit}},
   year = {2023},
-  institution = {The Economist Intelligence Unit}
+  institution = {The Economist Intelligence Unit},
+  file = {C:\Users\marquexa\Zotero\storage\YBGJ2AE4\The Economist Intelligence Unit - 2023 - Democracy index 2022 Frontline Democracy and the .pdf}
 }
 
-@article{extended_uds_marquez,
-  type = {Journal {{Article}}},
+@techreport{eiu2024democracy,
+  title = {Democracy Index 2023: {{Age}} of Conflict},
+  author = {The Economist Intelligence Unit},
+  year = {2024},
+  address = {London, United Kingdom},
+  institution = {Economist Intelligence Unit},
+  file = {C:\Users\marquexa\Zotero\storage\DWWPNWT5\The Economist Intelligence Unit - 2024 - Democracy index 2023 Age of conflict.pdf}
+}
+
+@techreport{eiu2025democracy,
+  title = {Democracy {{Index}} 2024: {{What}}'s Wrong with Representative Democracy?},
+  author = {{The Economist Intelligence Unit}},
+  year = {2025},
+  address = {London, UK},
+  institution = {The Economist Intelligence Unit Limited},
+  file = {C:\Users\marquexa\Zotero\storage\9EC6MDXP\The Economist Intelligence Unit - 2025 - Democracy Index 2024 What's wrong with representa.pdf}
+}
+
+@article{extended_uds_marquez2016,
   title = {A Quick Method for Extending the Unified Democracy Scores},
-  author = {Marquez, Xavier},
+  author = {Márquez, Xavier},
   year = {2016},
-  journal = {Available at SSRN 2753830}
+  journal = {Available at SSRN 2753830},
+  doi = {10.2139/ssrn.2753830},
+  copyright = {All rights reserved},
+  file = {C:\Users\marquexa\Zotero\storage\6E3W66RB\Márquez - 2016 - A quick method for extending the unified democracy.pdf}
 }
 
 @techreport{fh2024,
   title = {Freedom in the World 2024: {{The Mounting Damage}} of {{Flawed Elections}} and {{Armed Conflict}}},
   author = {{Freedom House}},
   year = {2024},
-  institution = {Freedom House}
+  institution = {Freedom House},
+  file = {C:\Users\marquexa\Zotero\storage\9TAAXT8E\Freedom House - 2024 - Freedom in the world 2024 The Mounting Damage of .pdf}
 }
 
-@article{Gleditsch1999,
+@techreport{fh2025,
+  title = {Freedom in the World 2025: {{The Uphill Battle}} to {{Safeguard Rights}}},
+  author = {Freedom House},
+  year = {2025},
+  month = feb,
+  institution = {Freedom House},
+  file = {C:\Users\marquexa\Zotero\storage\4X4QZFSP\Freedom House - 2025 - Freedom in the world 2025 The Uphill Battle to Sa.pdf}
+}
+
+@article{Gasiorowski1996,
+  title = {An Overview of the Political Regime Change Dataset},
+  author = {Gasiorowski, Mark},
+  year = {1996},
+  journal = {Comparative Political Studies},
+  volume = {29},
+  number = {4},
+  pages = {469--483},
+  doi = {10.1177/0010414096029004004},
+  file = {C:\Users\marquexa\Zotero\storage\FDFJWML2\Gasiorowski - 1996 - An overview of the political regime change dataset.pdf}
+}
+
+@article{GleditschWard1999,
   title = {Interstate System Membership: {{A}} Revised List of Independent States since the Congress of {{Vienna}}},
-  author = {Gleditsch, Kristian and Ward, Michael D.},
+  author = {Gleditsch, Kristian S and Ward, Michael D},
   year = {1999},
   journal = {International Interactions},
   volume = {25},
   number = {4},
   pages = {393--413},
-  doi = {10.1080/03050629908434958}
+  doi = {10.1080/03050629908434958},
+  file = {C:\Users\marquexa\Zotero\storage\HWMDHNYB\Gleditsch and Ward - 1999 - Interstate system membership A revised list of in.pdf}
+}
+
+@article{grundlerUsingMachineLearning2021,
+  title = {Using {{Machine Learning}} for Measuring Democracy: {{A}} Practitioners Guide and a New Updated Dataset for 186 Countries from 1919 to 2019},
+  author = {Gründler, Klaus and Krieger, Tommy},
+  year = {2021/05/17/},
+  journal = {European Journal of Political Economy},
+  pages = {102047},
+  doi = {10.1016/j.ejpoleco.2021.102047},
+  abstract = {We provide a comprehensive overview of the literature on the measurement of democracy and present an extensive update of the Machine Learning indicator of Gründler and Krieger (2016). Four improvements are particularly notable: First, we produce a continuous and a dichotomous version of the Machine Learning democracy indicator. Second, we calculate intervals that reflect the degree of measurement uncertainty. Third, we refine the conceptualization of the Machine Learning Index. Finally, we significantly expand the data coverage by providing democracy indices for 186 countries in the period from 1919 to 2019.},
+  keywords = {Data aggregation,Democracy indicators,Machine Learning,Measurement issues,Regime classifications,Support Vector Machines},
+  file = {C:\Users\marquexa\Zotero\storage\5AZU7UY8\1-s2.0-S017626802100046X-main.pdf}
 }
 
 @article{gwf2014,
-  title = {Autocratic Breakdown and Regime Transitions: A New Data Set},
+  title = {Autocratic Breakdown and Regime Transitions: {{A}} New Data Set},
   author = {Geddes, Barbara and Wright, Joseph and Frantz, Erica},
   year = {2014},
   journal = {Perspectives on Politics},
   volume = {12},
   number = {1},
   pages = {313--331},
-  doi = {10.1017/S1537592714000851}
+  doi = {10.1017/S1537592714000851},
+  file = {C:\Users\marquexa\Zotero\storage\95A924V9\Geddes et al. - 2014 - Autocratic breakdown and regime transitions A new.pdf}
 }
 
-@book{hadenius1992,
+@book{Hadenius1992,
   title = {Democracy and Development},
   author = {Hadenius, Axel},
   year = {1992},
   publisher = {Cambridge University Press},
-  address = {New York}
+  address = {New York},
+  file = {C:\Users\marquexa\Zotero\storage\3MEP89MR\Hadenius - 1992 - Democracy and development.pdf}
 }
 
-@article{Kailitz2013,
+@article{kailitz2013,
   title = {Classifying Political Regimes Revisited: Legitimation and Durability},
   author = {Kailitz, Steffen},
   year = {2013},
@@ -156,7 +230,25 @@
   volume = {20},
   number = {1},
   pages = {39--60},
-  doi = {10.1080/13510347.2013.738861}
+  abstract = {This article presents a new typology and a new dataset of political regimes (1946?2010). The classification presented is based, in theoretical terms, on the distinctive patterns of legitimation exhibited by the political regimes. To demonstrate the usefulness of the classification, I explore the extent to which the classification and its theoretical foundation, namely the pattern of legitimation, helps to explain the durability of different political regime types. I compare the results and explanations with those of Geddes and Hadenius and Teorell in order to clarify the differences made by the use of the presented classification.},
+  file = {C\:\\Users\\marquexa\\Zotero\\storage\\7FHGCC69\\Kailitz-2013-Classifying political regimes rev.pdf;C\:\\Users\\marquexa\\Zotero\\storage\\GAN3KGR4\\Kailitz-2013-Classifying political regimes re1.pdf}
+}
+
+@misc{kailitz2024dataset,
+  title = {Varieties of Political Regimes (va-{{PoReg}}). {{Dataset}}},
+  author = {Kailitz, Steffen},
+  year = {2024},
+  publisher = {Hannah Arendt Institute for Totalitarianism Studies},
+  address = {Dresden}
+}
+
+@techreport{kailitzVarietiesPoliticalRegimes2024,
+  title = {Varieties of Political Regimes (va-{{PoReg}}). {{Codebook}}. {{Version}} 1.7},
+  author = {Kailitz, Steffen},
+  year = {2024},
+  address = {Dresden},
+  institution = {Hannah Arendt Institute for Totalitarianism Studies},
+  file = {C:\Users\marquexa\Zotero\storage\FPBHT3W9\Kailitz - 2024 - Varieties of political regimes (va-PoReg). Codeboo.pdf}
 }
 
 @article{LIED2015,
@@ -167,14 +259,16 @@
   volume = {48},
   number = {12},
   pages = {1491--1525},
-  doi = {10.1177/0010414015581050}
+  doi = {10.1177/0010414015581050},
+  file = {C\:\\Users\\marquexa\\Zotero\\storage\\8APQYRWZ\\Skaaning et al. - 2015 - A lexical index of electoral democracy.pdf;C\:\\Users\\marquexa\\Zotero\\storage\\FZABWP2G\\Skaaning et al. - 2015 - A lexical index of electoral democracy.pdf}
 }
 
 @misc{MagaloniChuMin2013,
   type = {Dataset},
   title = {Autocracies of the World, 1950-2012 (Version 1.0)},
   author = {Magaloni, Beatriz and Chu, Jonathan and Min, Eric},
-  year = {2013}
+  year = {2013},
+  file = {C:\Users\marquexa\Zotero\storage\8K43QVXS\Magaloni et al. - 2013 - Autocracies of the world, 1950-2012 (version 1.0).pdf}
 }
 
 @article{mainwaring2001,
@@ -185,17 +279,18 @@
   volume = {36},
   number = {1},
   pages = {37--65},
-  doi = {10.1007/bf02687584}
+  doi = {10.1007/bf02687584},
+  file = {C:\Users\marquexa\Zotero\storage\E4MQDDXH\Mainwaring et al. - 2001 - Classifying political regimes in latin america.pdf}
 }
 
 @incollection{mainwaring2014,
-  title = {Political Regimes in Latin America, 1900-2007 (with Daniel Brinks)},
-  booktitle = {Democracies and Dictatorships in Latin America: {{Emergence}}, Survival, and Fall},
+  title = {Political {{Regimes}} in {{Latin America}}, 1900-2007 (with {{Daniel Brinks}})},
+  booktitle = {Democracies and {{Dictatorships}} in {{Latin America}}: {{Emergence}}, {{Survival}}, and {{Fall}}},
   author = {Mainwaring, Scott and {Pérez-Liñán}, Aníbal and Brinks, Daniel},
   year = {2014},
   publisher = {Cambridge University Press},
   address = {New York},
-  chapter = {Political Regimes in Latin America, 1900-2007 (with Daniel Brinks)}
+  file = {C:\Users\marquexa\Zotero\storage\8Y8XWSH3\Mainwaring et al. - 2014 - Political Regimes in Latin America, 1900-2007 (wit.pdf}
 }
 
 @misc{marquez2020democracyData,
@@ -205,11 +300,12 @@
 }
 
 @book{munck2009,
-  title = {Measuring Democracy: A Bridge between Scholarship and Politics},
+  title = {Measuring {{Democracy}}: A {{Bridge}} between {{Scholarship}} and {{Politics}}},
   author = {Munck, Gerardo},
   year = {2009},
   publisher = {The Johns Hopkins University Press},
-  address = {Baltimore}
+  address = {Baltimore},
+  file = {C:\Users\marquexa\Zotero\storage\9GHYW9G6\Munck - 2009 - Measuring Democracy a Bridge between Scholarship .pdf}
 }
 
 @article{pacl_update_2020,
@@ -220,18 +316,22 @@
   volume = {15},
   number = {2},
   pages = {531--551},
-  doi = {10.1007/s11558-019-09345-1}
+  doi = {10.1007/s11558-019-09345-1},
+  file = {C:\Users\marquexa\Zotero\storage\MWNKYZP6\Bjørnskov and Rode - 2020 - Regime types and regime change A new dataset on d.pdf}
 }
 
 @article{pacl2010,
   title = {Democracy and Dictatorship Revisited},
-  author = {Cheibub, José and Gandhi, Jennifer and Vreeland, James},
-  year = {2010},
+  author = {Cheibub, José Antonio and Gandhi, Jennifer and Vreeland, James Raymond},
+  year = {2009},
   journal = {Public Choice},
   volume = {143},
-  number = {1},
+  number = {1-2},
   pages = {67--101},
-  doi = {10.1007/s11127-009-9491-2}
+  doi = {10.1007/s11127-009-9491-2},
+  abstract = {We address the strengths and weaknesses of the main available measures of political regime and extend the dichotomous regime classification first introduced in Alvarez et al. (Stud. Comp. Int. Dev. 31(2):3–36, 1996). This extension focuses on how incumbents are removed from office. We argue that differences across regime measures must be taken seriously and that they should be evaluated in terms of whether they (1) serve to address important research questions, (2) can be interpreted meaningfully, and (3) are reproducible. We argue that existing measures of democracy are not interchangeable and that the choice of measure should be guided by its theoretical and empirical underpinnings. We show that the choice of regime measure matters by replicating studies published in leading journals.},
+  keywords = {democracy,dictatorship,measurement,political_regime_classifications,pols209,regime_types,the_nature_of_dictatorship},
+  file = {C:\Users\marquexa\Zotero\storage\6FQABBVT\Cheibub-2010-Democracy and dictatorship revisi.pdf}
 }
 
 @article{peps2006,
@@ -242,7 +342,8 @@
   volume = {41},
   number = {2},
   pages = {3--32},
-  doi = {10.1007/BF02686309}
+  doi = {10.1007/BF02686309},
+  file = {C:\Users\marquexa\Zotero\storage\2Z2IGPSD\Moon et al. - 2006 - Voting counts Participation in the measurement of.pdf}
 }
 
 @misc{PIPE2013,
@@ -261,33 +362,40 @@
   volume = {54},
   number = {1},
   pages = {190--208},
-  doi = {10.1111/j.1540-5907.2009.00426.x}
+  doi = {10.1111/j.1540-5907.2009.00426.x},
+  file = {C:\Users\marquexa\Zotero\storage\F8ESRE2V\Goldstone et al. - 2010 - A global model for forecasting political instabili.pdf}
 }
 
 @article{pitf2015,
-  title = {A Measurement Error Model of Dichotomous Democracy Status},
-  author = {Taylor, Sean J and Ulfelder, Jay},
+  title = {A {{Measurement Error Model}} of {{Dichotomous Democracy Status}}},
+  author = {Taylor, Sean J. and Ulfelder, Jay},
   year = {2015},
   journal = {Available at SSRN},
-  doi = {10.2139/ssrn.2726962}
+  doi = {10.2139/ssrn.2726962},
+  file = {C\:\\Users\\marquexa\\Zotero\\storage\\GNA28D92\\Taylor and Ulfelder - 2015 - A measurement error model of dichotomous democracy.pdf;C\:\\Users\\marquexa\\Zotero\\storage\\U2VZ8HKG\\SSRN-id2726962.pdf}
 }
 
-@article{pmm2010uds2010,
-  title = {Democratic Compromise: A Latent Variable Analysis of Ten Measures of Regime Type},
+@article{pmm2010,
+  title = {Democratic Compromise: {{A}} Latent Variable Analysis of Ten Measures of Regime Type},
   author = {Pemstein, Daniel and Meserve, Stephen and Melton, James},
   year = {2010},
   journal = {Political Analysis},
   volume = {18},
   number = {4},
   pages = {426--449},
-  doi = {10.1093/pan/mpq020}
+  doi = {10.1093/pan/mpq020},
+  __markedentry = {[Marquez family:6]},
+  owner = {Marquez family},
+  timestamp = {2014.05.07},
+  file = {C:\Users\marquexa\Zotero\storage\MDPZUVPC\Pemstein et al. - 2010 - Democratic compromise a latent variable analysis .pdf}
 }
 
 @misc{pmm2013uds2010,
   title = {Replication Data for: {{Democratic}} Compromise: A Latent Variable Analysis of Ten Measures of Regime Type},
   author = {Pemstein, Daniel and Meserve, Stephen A. and Melton, James},
   year = {2013},
-  publisher = {Harvard Dataverse}
+  publisher = {Harvard Dataverse},
+  doi = {10.7910/DVN/WWYOHU}
 }
 
 @manual{polity2019,
@@ -295,7 +403,8 @@
   title = {Polity {{IV}} Project: {{Political}} Regime Characteristics and Transitions, 1800-2018. {{Dataset}} Users' Manual.},
   author = {Marshall, Monty G. and Gurr, Ted Robert and Jaggers, Keith},
   year = {2019},
-  institution = {Center for Systemic Peace}
+  institution = {Center for Systemic Peace},
+  file = {C:\Users\marquexa\Zotero\storage\UAHRMRIJ\Marshall et al. - 2019 - Polity IV project Political regime characteristic.pdf}
 }
 
 @manual{polity2020,
@@ -303,7 +412,8 @@
   title = {Polity 5: {{Political}} Regime Characteristics and Transitions, 1800-2018. {{Dataset}} Users' Manual.},
   author = {Marshall, Monty G. and Gurr, Ted Robert},
   year = {2020},
-  institution = {Center for Systemic Peace}
+  institution = {Center for Systemic Peace},
+  file = {C:\Users\marquexa\Zotero\storage\9GVFKEE9\Marshall and Gurr - 2020 - Polity 5 Political regime characteristics and tra.pdf}
 }
 
 @article{polyarchy_dimensions2008,
@@ -314,7 +424,8 @@
   volume = {70},
   number = {03},
   pages = {632--647},
-  doi = {10.1017/S0022381608080663}
+  doi = {10.1017/S0022381608080663},
+  file = {C:\Users\marquexa\Zotero\storage\AWPLQR4W\Coppedge et al. - 2008 - Two persistent dimensions of democracy Contestati.pdf}
 }
 
 @article{polyarchy1990,
@@ -325,18 +436,7 @@
   volume = {25},
   number = {1},
   pages = {51--72},
-  doi = {10.1007/Bf02716905}
-}
-
-@article{prc_gasiorowski1996,
-  title = {An Overview of the Political Regime Change Dataset},
-  author = {Gasiorowski, Mark},
-  year = {1996},
-  journal = {Comparative Political Studies},
-  volume = {29},
-  number = {4},
-  pages = {469--483},
-  doi = {10.1177/0010414096029004004}
+  file = {C:\Users\marquexa\Zotero\storage\5GN3A8Q6\Coppedge and Reinicke - 1990 - Measuring polyarchy.pdf}
 }
 
 @article{prc_gasiorowski2002,
@@ -347,7 +447,8 @@
   volume = {9},
   number = {4},
   pages = {1--24},
-  doi = {10.1080/714000289}
+  doi = {10.1080/714000289},
+  file = {C:\Users\marquexa\Zotero\storage\8MYBHLU8\Reich - 2002 - Categorizing political regimes New data for old p.pdf}
 }
 
 @misc{reign2016,
@@ -365,7 +466,8 @@
   journal = {European Journal of Political Economy},
   volume = {45},
   pages = {85--107},
-  doi = {10.1016/j.ejpoleco.2016.05.005}
+  doi = {10.1016/j.ejpoleco.2016.05.005},
+  file = {C:\Users\marquexa\Zotero\storage\2H4GKFKK\Gründler and Krieger - 2016 - Democracy and growth Evidence from a machine lear.pdf}
 }
 
 @techreport{svmdi2018,
@@ -373,24 +475,18 @@
   title = {Machine Learning Indices, Political Institutions, and Economic Development},
   author = {Gründler, Klaus and Krieger, Tommy},
   year = {2018},
-  institution = {CESifo Group Munich}
+  institution = {CESifo Group Munich},
+  file = {C:\Users\marquexa\Zotero\storage\3CJ3JUBT\Gründler and Krieger - 2018 - Machine learning indices, political institutions, .pdf}
 }
 
-@article{svmdi2021,
-  title = {Using {{Machine Learning}} for Measuring Democracy: {{A}} Practitioners Guide and a New Updated Dataset for 186 Countries from 1919 to 2019},
-  author = {Gründler, Klaus and Krieger, Tommy},
-  year = {2021},
-  journal = {European Journal of Political Economy},
-  pages = {102--47},
-  doi = {10.1016/j.ejpoleco.2021.102047}
-}
-
-@book{svolik2012,
-  title = {The Politics of Authoritarian Rule},
+@book{svolikPoliticsAuthoritarianRule2012,
+  title = {The {{Politics}} of {{Authoritarian Rule}}},
   author = {Svolik, Milan},
   year = {2012},
   publisher = {Cambridge University Press},
-  address = {Cambridge}
+  address = {Cambridge and New York},
+  keywords = {dictatorship},
+  file = {C:\Users\marquexa\Zotero\storage\2Q9UAMAN\Svolik-2012-The Politics of Authoritarian Rule.pdf}
 }
 
 @article{ulfelder2007,
@@ -401,14 +497,17 @@
   volume = {14},
   number = {3},
   pages = {351--387},
-  doi = {10.1080/13510340701303196}
+  doi = {10.1080/13510340701303196},
+  file = {C:\Users\marquexa\Zotero\storage\FU7CTFFF\Ulfelder and Lustik - 2007 - Modelling transitions to and from democracy.pdf}
 }
 
 @misc{ulfelder2012,
   title = {Democracy/Autocracy Data Set},
   author = {Ulfelder, Jay},
   year = {2012},
-  publisher = {Harvard Dataverse}
+  publisher = {Harvard Dataverse},
+  doi = {10.7910/DVN/M11WFC},
+  file = {C:\Users\marquexa\Zotero\storage\SBR5MNJB\Ulfelder - 2012 - Democracyautocracy data set.pdf}
 }
 
 @article{utip2008,
@@ -416,7 +515,8 @@
   author = {Hsu, Sara},
   year = {2008},
   journal = {UTIP Working Paper},
-  number = {53}
+  number = {53},
+  file = {C:\Users\marquexa\Zotero\storage\YA9LAVUF\Hsu - 2008 - The effect of political regimes on inequality, 196.pdf}
 }
 
 @misc{vanhanen2019,
@@ -424,31 +524,56 @@
   author = {Vanhanen, Tatu},
   year = {2019},
   publisher = {Finnish Social Science Data Archive (distributor)},
-  address = {Tampere}
+  address = {Tampere},
+  file = {C:\Users\marquexa\Zotero\storage\HPUVA82T\Vanhanen - 2019 - Measures of democracy 1810-2018 (dataset). Version.pdf}
 }
 
 @misc{vdem13codebook,
   title = {V-Dem Codebook V13},
-  author = {Coppedge, Michael and Gerring, John and Knutsen, Carl Henrik and Lindberg, Staffan I. and Teorell, Jan and Altman, David and Bernhard, Michael and Cornell, Agnes and Fish, M. Steven and Gastaldi, Lisa and Gjerløw, Haakon and Glynn, Adam and Grahn, Sandra and Hicken, Allen and Kinzelbach, Katrin and Marquardt, Kyle L. and McMann, Kelly and Mechkova, Valeriya and Neundorf, Anja and Paxton, Pamela and Pemstein, Daniel and Rydén, Oskar and {von Römer}, Johannes and Seim, Brigitte and Sigman, Rachel and Skaaning, Svend-Erik and Staton, Jeffrey and Sundström, Aksel and Tzelgov, Eitan and Uberti, Luca and Wang, Yi-ting and Wig, Tore and Ziblatt, Daniel}
+  author = {Coppedge, Michael and Gerring, John and Knutsen, Carl Henrik and Lindberg, Staffan I. and Teorell, Jan and Altman, David and Bernhard, Michael and Cornell, Agnes and Fish, M. Steven and Gastaldi, Lisa and Gjerløw, Haakon and Glynn, Adam and Grahn, Sandra and Hicken, Allen and Kinzelbach, Katrin and Marquardt, Kyle L. and McMann, Kelly and Mechkova, Valeriya and Neundorf, Anja and Paxton, Pamela and Pemstein, Daniel and Rydén, Oskar and {von Römer}, Johannes and Seim, Brigitte and Sigman, Rachel and Skaaning, Svend-Erik and Staton, Jeffrey and Sundström, Aksel and Tzelgov, Eitan and Uberti, Luca and Wang, Yi-ting and Wig, Tore and Ziblatt, Daniel},
+  publisher = {Varieties of Democracy (V-Dem) Project},
+  file = {C:\Users\marquexa\Zotero\storage\ZXC687ZM\Coppedge et al. - V-dem codebook v13.pdf}
 }
 
 @techreport{vdem13measurement,
-  title = {The V-Dem Measurement Model: {{Latent}} Variable Analysis for Cross-National and Cross-Temporal Expert-Coded Data},
+  title = {The {{V-dem Measurement Model}}: {{Latent Variable Analysis}} for {{Cross-national}} and {{Cross-temporal Expert-coded Data}}},
   author = {Pemstein, Daniel and Marquardt, Kyle L. and Tzelgov, Eitan and Wang, Yi-ting and Medzihorsky, Juraj and Krusell, Joshua and Miri, Farhad and {von Römer}, Johannes},
   year = {2022},
   edition = {7th},
   number = {21},
-  institution = {Varieties of Democracy Institute, University of Gothenburg}
+  institution = {Varieties of Democracy Institute, University of Gothenburg},
+  file = {C:\Users\marquexa\Zotero\storage\WTH6PTJG\Pemstein et al. - 2022 - The V-dem Measurement Model Latent Variable Analy.pdf}
+}
+
+@techreport{vdem14codebook,
+  title = {V-{{Dem Codebook}} V14},
+  author = {Coppedge, Michael and Gerring, John and Knutsen, Carl Henrik and Lindberg, Staffan I. and Teorell, Jan and Altman, David and Angiolillo, Fabio and Bernhard, Michael and Borella, Cecilia and Cornell, Agnes and Fish, M. Steven and Fox, Linnea and Gastaldi, Lisa and Gjerløw, Haakon and Glynn, Adam and Good God, Ana and Grahn, Sandra and Hicken, Allen and Kinzelbach, Katrin and Marquardt, Kyle L. and McMann, Kelly and Mechkova, Valeriya and Neundorf, Anja and Paxton, Pamela and Pemstein, Daniel and Rydén, Oskar and {von Römer}, Johannes and Seim, Brigitte and Sigman, Rachel and Skaaning, Svend-Erik and Staton, Jeffrey and Sundström, Aksel and Tzelgov, Eitan and Uberti, Luca and Wang, Yi-ting and Wig, Tore and Ziblatt, Daniel},
+  year = {2024},
+  institution = {Varieties of Democracy (V-Dem) Project},
+  file = {C:\Users\marquexa\Zotero\storage\FW6B4TSI\Coppedge et al. - 2024 - V-dem codebook v14.pdf}
+}
+
+@techreport{vdem15codebook,
+  type = {Report},
+  title = {V-{{Dem Codebook}} V15},
+  author = {Coppedge, Michael and Gerring, John and Knutsen, Carl Henrik and Lindberg, Staffan I. and Teorell, Jan and Altman, David and Angiolillo, Fabio and Bernhard, Michael and Cornell, Agnes and Fish, M. Steven and Fox, Linnea and Gastaldi, Lisa and Gjerløw, Haakon and Glynn, Adam and God, Ana Good and Grahn, Sandra and Hicken, Allen and Kinzelbach, Katrin and Marquardt, Kyle L. and McMann, Kelly and Mechkova, Valeriya and Neundorf, Anja and Paxton, Pamela and Pemstein, Daniel and {von Römer}, Johannes and Seim, Brigitte and Sigman, Rachel and Skaaning, Svend-Erik and Staton, Jeffrey and Sundström, Aksel and Tannenberg, Marcus and Tzelgov, Eitan and Wang, Yi-ting and Wiebrecht, Felix and Wig, Tore and Ziblatt, Daniel},
+  year = {2025},
+  institution = {Varieties of Democracy (V-Dem) Project},
+  file = {C:\Users\marquexa\Zotero\storage\BHQKBV5W\Coppedge et al. - 2025 - V-Dem Codebook v15.pdf}
 }
 
 @article{wahman_teorell_hadenius2007,
-  title = {Pathways from Authoritarianism},
+  title = {Pathways from {{Authoritarianism}}},
   author = {Hadenius, Axel and Teorell, Jan},
   year = {2007},
   journal = {Journal of Democracy},
   volume = {18},
   number = {1},
-  pages = {143--157}
+  pages = {143--157},
+  doi = {10.1353/jod.2007.0009},
+  abstract = {This paper uses a new typology of authoritarian regimes to explore the extent to which regime type explains the survival (and breakdown) of non-democratic regimes as well as the impact of different types of authoritarian regimes on democratic development. Our results demonstrate that different types of authoritarian regime face different propensities to develop toward democracy. Hence the nature of the authoritarian regime in question deserves to be added to the list of democracy's essential preconditions. One regime type—the limited multiparty system—stands out as the prime stepping stone to democracy. The fact that this regime type has become the most common form of authoritarianism can be seen as a promising sign for the future.},
+  keywords = {pols209,regime_change},
+  file = {C:\Users\marquexa\Zotero\storage\B9ASGRK3\Hadenius-2007-Pathways from Authoritarianism.pdf}
 }
 
 @article{wahman_teorell_hadenius2013,
@@ -458,12 +583,16 @@
   journal = {Contemporary Politics},
   volume = {19},
   number = {1},
-  pages = {19--34}
+  pages = {19--34},
+  doi = {10.1080/13569775.2013.773200},
+  keywords = {advantage,authoritarian,classification,dataset,democracy,democratization,elections,incumbency,regime type},
+  file = {C\:\\Users\\marquexa\\Zotero\\storage\\22WVG2N7\\Wahman-2013-Authoritarian regime types revisi2.pdf;C\:\\Users\\marquexa\\Zotero\\storage\\AMBKTJHI\\autoregime5.xls;C\:\\Users\\marquexa\\Zotero\\storage\\APSTIFBZ\\Wahman-2013-Authoritarian regime types revisit.pdf;C\:\\Users\\marquexa\\Zotero\\storage\\WHN2UZQA\\autoregime5.xls}
 }
 
 @misc{wgi2017,
   title = {Worldwide Governance Indicators},
   author = {Kaufmann, Daniel and Kraay, Aart},
   year = {2020},
-  publisher = {The World Bank Research Group}
+  publisher = {The World Bank Research Group},
+  file = {C:\Users\marquexa\Zotero\storage\CP68FVYD\Kaufmann and Kraay - 2020 - Worldwide governance indicators.pdf}
 }
