--- a/README.Rmd
+++ b/README.Rmd
@@ -115,7 +115,7 @@ For a list of all the democracy datasets available through this package, type `d
 ```{r}
 library(dplyr)
 
-democracy_info %>%
+democracy_info |>
   knitr::kable()
 
 ```
@@ -132,7 +132,7 @@ democracy_data <- generate_democracy_scores_dataset(output_format = "wide",
 democracy_data
 ```
 
-This can take some time, since it downloads all downloadable datasets (Freedom House, Polity 5, and the WGI Voice and Accountability index), processes them (adds state system information, puts them in country-year format, fixes wrong codes, etc.), and matches them to all the other datasets. In any case, you can select exactly which datasets to include in your big data frame. See `?generate_democracy_scores_dataset` for further options to customize the output.
+You can select exactly which datasets to include in your big data frame. See `?generate_democracy_scores_dataset` for further options to customize the output.
 
 
 ## Latent Variable Indexes of Democracy
@@ -176,7 +176,7 @@ set.seed(14)
 
 ```{r}
 
-my_weird_democracy_data <- my_weird_democracy_data %>%
+my_weird_democracy_data <- my_weird_democracy_data |>
   country_year_coder(country,
                      year,
                      match_type = "country",
@@ -190,7 +190,7 @@ my_weird_democracy_data <- my_weird_democracy_data %>%
                                            "polity_startdate",
                                            "polity_enddate"))
 
-my_weird_democracy_data %>%
+my_weird_democracy_data |>
   knitr::kable()
 ```
 
